...
            ),
          ),
          const SizedBox(
            height: 50.0,
          ),
          Text(
            'Welcome',
            style: TextStyle(
                fontFamily: 'Montserrat',
                fontSize: 18,
                color: Theme.of(context).primaryColor),
          ),
          const SizedBox(
...
