...
    applicationNewVersion = json['application_new_version'];
    applicationType = json['application_type'];
    androidLink = json['android_link'];
    iosInk = json['ios_ink'];
    aboutApp =
        json['about_app'] != null ? AboutApp.fromJson(json['about_app']) : null;
    password =
        json['password'] != null ? Password.fromJson(json['password']) : null;
  }

  Map<String, dynamic> toJson() {
    final Map<String, dynamic> data = <String, dynamic>{};
    data['application_name'] = applicationName;
...
