...
                                  : Container(),
                            ],
                          ),
                        ),
                      ),
                      Container(
                        key: const Key("IhaveReadAndAgree"),
                        margin: const EdgeInsets.symmetric(
                            horizontal: 20, vertical: 10),
                        child: CustomButton(
                          isOutline: false,
                          isDisable: false,
                          onPressed: () {
...
